<resources>
    <string name="app_name">G9StuMgr</string>
    <string name="importInfo">导入学生信息</string>
    <string name="exportInfo">导出学生信息</string>
    <string name="nametable">姓名</string>
    <string name="phonelable">电话</string>
    <string name="addresslable">地址</string>
    <string name="genderlable">性别</string>
    <string name="agelable">年龄</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>