<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
        <data>

            <variable
                name="student"
                type="org.group9.stumgr.bean.Student" />
        </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nametable" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="150dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@={student.name}"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="30dp"
                    android:text="@string/agelable" />

                <EditText
                    android:id="@+id/agee"
                    android:layout_width="150dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@={student.age}"

                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phonelable" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="150dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@={student.phoneNumber}"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genderlable" />

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@={student.gender}"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addresslable" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="150dp"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@={student.address}"
                    />
            </LinearLayout>


        </LinearLayout>
</layout>
